test/spec_vectors/align64/ok/module_17.wat
(module (memory i64 0) (func (i64.store8 align=1 (i64.const 0) (i64.const 1))))