test/spec_vectors/align64/fail/module_104.wat
(module (memory i64 0) (func (f32.store align=8 (i64.const 0) (f32.const 0))))